tests/baselines/reference/asyncArrowFunction10_es2017.errors.txt
asyncArrowFunction10_es2017.ts(3,11): error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?


==== asyncArrowFunction10_es2017.ts (1 errors) ====
    var foo = async (): Promise<void> => {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?
    }
    